<resources>
    <string name="app_name">MyEmptyViews</string>

    <string name="logging">logging</string>
    <string name="choose_activity">choose activity</string>
    <string name="login_activity">login activity</string>
    <string name="second_activity">second activity</string>
    <string name="third_activity">third activity</string>
    <string name="fourth_activity">fourth activity</string>

    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_here_sign_up">New Here? Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="clicked_sign_in">You Clicked: Sign in</string>
    <string name="clicked_forgot_password">You clicked: Forgot password</string>
    <string name="clicked_sign_up">You clicked: Sign up</string>

    <string name="your_basket">Your basket</string>
    <string name="donut">donut</string>
    <string name="peas">peas</string>
    <string name="oranges">oranges</string>
    <string name="donut_price">$2.97</string>
    <string name="peas_price_">$1.64</string>
    <string name="oranges_price">$4</string>
    <integer name="donut_pc">3</integer>
    <integer name="peas_pc">50</integer>
    <integer name="oranges_pc">2</integer>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="subtotal_price">$8.61</string>
    <string name="delivery_price">$1.00</string>
    <string name="total_price">$9.61</string>
    <string name="order_now">Order now</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>
    <string name="image_of_product">image of product</string>
    <string name="delete_product">delete the product from the basket</string>

    <string name="calorie_background_image">background image</string>
    <string name="description">description</string>
    <string name="caprese_salad">Caprese Salad</string>
    <string name="kcal">Kcal</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="kcal_value">166</string>
    <string name="carbs_value">5 g</string>
    <string name="protein_value">5 g</string>
    <string name="fat_value">13 g</string>

</resources>