<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calorie_counter_background_color"
    tools:context=".CalorieCounterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/calorie_background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/image_salad"
        app:layout_constraintBottom_toBottomOf="@id/guideline_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_normal"
        app:cardBackgroundColor="@color/calorie_counter_basic_color"
        app:cardCornerRadius="@dimen/large_radius_card_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_card_view">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/description">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_large">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/margin_large"
                    android:text="@string/caprese_salad"
                    android:textColor="@color/calorie_counter_text_color_black"
                    android:textSize="@dimen/login_text_large"
                    android:textStyle="bold"
                    android:typeface="serif"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/kcal"
                    style="@style/CalorieActivityGrayTextStyle"
                    android:text="@string/kcal"
                    app:layout_constraintEnd_toStartOf="@+id/carbs"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <TextView
                    android:id="@+id/carbs"
                    style="@style/CalorieActivityGrayTextStyle"
                    android:text="@string/carbs"
                    app:layout_constraintEnd_toStartOf="@+id/protein"
                    app:layout_constraintStart_toEndOf="@+id/kcal"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <TextView
                    android:id="@+id/protein"
                    style="@style/CalorieActivityGrayTextStyle"
                    android:text="@string/protein"
                    app:layout_constraintEnd_toStartOf="@+id/fat"
                    app:layout_constraintStart_toEndOf="@+id/carbs"
                    app:layout_constraintTop_toBottomOf="@id/name" />

                <TextView
                    android:id="@+id/fat"
                    style="@style/CalorieActivityGrayTextStyle"
                    android:text="@string/fat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/protein"
                    app:layout_constraintTop_toBottomOf="@id/name" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>