<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/BasketActivityTheme"
    tools:context=".BasketActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/subtotal"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/item_product"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <include
                layout="@layout/item_product"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <include
                layout="@layout/item_product"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toTopOf="@id/delivery"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline" />

    <TextView
        android:id="@+id/delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/delivery"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:background="@color/basket_stroke_color"
        app:layout_constraintBottom_toTopOf="@id/total"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/order_button"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline" />

    <TextView
        android:id="@+id/subtotal_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/subtotal_price"
        app:layout_constraintBottom_toTopOf="@id/delivery"
        app:layout_constraintRight_toRightOf="@id/right_guideline" />

    <TextView
        android:id="@+id/delivery_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/delivery_price"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintRight_toRightOf="@id/right_guideline" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/total_price"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/order_button"
        app:layout_constraintRight_toRightOf="@id/right_guideline" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_basket_button"
        android:padding="12dp"
        android:text="@string/order_now"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>